--- a/index.html
+++ b/index.html
@@ -119,35 +119,37 @@
 								</ul>
 							</div>
 							<h2 class="major">Certificates</h2>
-							<span class="image main"><img src="images/Sertifikat/Sertifikat_ARIENTO SURYA DINTIARTO_Data Analyst_page-0001.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/freecodeDatascien.png" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/freecodeda.png" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/bitdegree-certificate-ai.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/bitdegree-certificate-mla.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/bitdegree-certificate-py.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/bitdegree-certificate-sql.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/bitdegree-certificate-tenserflow.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/sololearnpy.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/sololearnpya.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/sololearnsql.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-eda.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-pr1.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-pr2.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-py.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-py2.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-py3.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-R.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-sql1.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-viz.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-viz2.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLAB-vuz3.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLABIDS.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLABSQL-2.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/certificate-DQLABSQL-3.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/progate-Command Line_page-0001.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/ProgateGIT_page-0001.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/GCFEXCEL_page-0001.jpg" alt="" /></span>
-							<span class="image main"><img src="images/Sertifikat/GCFppt_page-0001.jpg" alt="" /></span>
+							<span class="image main">
+								<img src="images/Sertifikat/Sertifikat_ARIENTO SURYA DINTIARTO_Data Analyst_page-0001.jpg" alt="" /> <br>
+								<img src="images/Sertifikat/freecodeDatascien.png" alt="" /><br>
+								<img src="images/Sertifikat/freecodeda.png" alt="" /><br>
+								<img src="images/Sertifikat/bitdegree-certificate-ai.jpg" alt="" /><br>
+								<img src="images/Sertifikat/bitdegree-certificate-mla.jpg" alt="" /><br>
+								<img src="images/Sertifikat/bitdegree-certificate-py.jpg" alt="" /><br>
+								<img src="images/Sertifikat/bitdegree-certificate-sql.jpg" alt="" /><br>
+								<img src="images/Sertifikat/bitdegree-certificate-tenserflow.jpg" alt="" /><br>
+								<img src="images/Sertifikat/sololearnpy.jpg" alt="" /><br>
+								<img src="images/Sertifikat/sololearnpya.jpg" alt="" /><br>
+								<img src="images/Sertifikat/sololearnsql.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-eda.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-pr1.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-pr2.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-py.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-py2.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-py3.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-R.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-sql1.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-viz.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-viz2.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLAB-vuz3.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLABIDS.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLABSQL-2.jpg" alt="" /><br>
+								<img src="images/Sertifikat/certificate-DQLABSQL-3.jpg" alt="" /><br>
+								<img src="images/Sertifikat/progate-Command Line_page-0001.jpg" alt="" /><br>
+								<img src="images/Sertifikat/ProgateGIT_page-0001.jpg" alt="" /><br>
+								<img src="images/Sertifikat/GCFEXCEL_page-0001.jpg" alt="" /><br>
+								<img src="images/Sertifikat/GCFppt_page-0001.jpg" alt="" /><br>
+							</span>
 							</article>
 
 						<!-- Contact -->
