--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/custom.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -56,8 +57,101 @@
 									</ul>
 								</div>
 								<h2 class="major">Skills</h2>
+								<div class="colsss" style="margin-top:40px;">
+
+									<div class="colxx">
+										<div class="containerss">
+											<div class="frontt" style="background-image:url(proscon/images/sertif-bg.jpg)">
+												<div class="innerr">
+													<p><img src="./images/pelatihan.png" style="width:80px !important"></p>
+													<span class="title-box">Pelatihan &amp; Sertifikasi</span>
+												</div>
+											</div>
+											<div class="backk">
+												<div class="innerr">
+													<p><img src="../images/pelatihan.png" style="width:60px !important"></p>
+												  <p> SKKNI</p>
+												</div>
+											</div>
+										</div>
+									</div>
+	
+									<div class="colxx">
+										<div class="containerss">
+											<div class="frontt" style="background-image:url(proscon/images/dts-bg.jpg)">
+												<div class="innerr">
+													<p><img src="./images/dts.png" style="width:80px !important"></p>
+													  <span class="title-box">Digital Talent Scholarship</span>
+												</div>
+											</div>
+											<div class="backk">
+												<div class="innerr">
+													<p><img src="./images/dts.png" style="width:60px !important"></p>
+													<p>Beasiswa </p>
+												</div>
+											</div>
+										</div>
+									</div>
+	
+									<div class="colxx">
+										<div class="containerss">
+											<div class="frontt" style="background-image:url(proscon/images/kindev-bg.jpg)">
+												<div class="innerr">
+													<p><img src="./images/kindev.png" style="width:80px !important"></p>
+													<span class="title-box">Kindev LMS</span>
+												</div>
+											</div>
+											<div class="backk">
+												<div class="innerr">
+													<p><img src="./images/kindev.png" style="width:60px !important"></p>
+													<p>Aplikasi Learning </p>
+												</div>
+											</div>
+										</div>
+									</div>
+	
+									<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+									<p class="text-justify">I am passionate about data driven results. 
+										I like to use advanced technologies to address everyday problems for consumers and businesses alike.
+										I also enjoy solving issues using an analytical approach and 
+										incorporating technology into my work. <a href="#work">work</a>.</p>
+	
+										<div class="colxx">
+											<div class="containerss">
+											<div class="frontt" style="background-image:url(proscon/images/simonas-bg.jpg)">
+												<div class="innerr">
+													<p><img src="./images/simonas.png" style="width:80px !important"></p>
+													  <span class="title-box">SIMONAS</span>
+												</div>
+											</div>
+											<div class="backk">
+												<div class="innerr">
+													<p><img src="images/simonas-st.png" style="width:60px !important"></p>
+													<p>Portal Lowongan Kerja </p>
+												</div>
+											</div>
+										</div>
+									</div>
+	
+									<div class="colxx">
+										<div class="containerss">
+											<div class="frontt" style="background-image:url(proscon/images/dok-bg.jpg)">
+												<div class="innerr">
+													<p><img src="./images/skkni.png" style="width:80px !important"></p>
+													  <span class="title-box">Regulasi &amp; Publikasi</span>
+												</div>
+											</div>
+											<div class="backk">
+												<div class="innerr">
+													<p><img src="./images/skkni.png" style="width:60px !important"></p>
+													<p>Direktori Dokumen SKKNI</p>
+												</div>
+											</div>
+										</div>
+									</div>
+	
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>I am passionate about data driven results. 
+								<p class="text-justify">I am passionate about data driven results. 
 									I like to use advanced technologies to address everyday problems for consumers and businesses alike.
 									I also enjoy solving issues using an analytical approach and 
 									incorporating technology into my work. <a href="#work">work</a>.</p>
