--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 							<div class="inner">
 								<span  ><img src="images/profil-1.png" alt=""></span>
 								<h1>Ariento Surya Dintiarto</h1>
-								<p>Welcome to my portfolio!</p>
+								<p><span class="typed" data-typed-items="Data Analyst, Mathematics, Data Science, Data Engineer"></span></p>
+								<!-- <p>Welcome to my portfolio!</p> -->
 							</div>
 						</div>
 						<nav>
@@ -35,7 +36,7 @@
 								<li><a href="#about">About</a></li>
 								<li><a href="#skills">Skills</a></li>
 								<li><a href="#certificates">Certificates</a></li>
-								<li><a href="#work">Work</a></li>							
+								<li><a href="#project">Project</a></li>							
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -52,7 +53,7 @@
 									<ul style="display: flex; list-style: none; float: right;">								
 										<li><a href="#about">About</a></li>
 										<li><a href="#certificates">Certificates</a></li>
-										<li><a href="#work">Work</a></li>							
+										<li><a href="#project">Project</a></li>							
 										<li><a href="#contact">Contact</a></li>
 									</ul>
 								</div>
@@ -138,7 +139,7 @@
 									<p class="text-justify">I am passionate about data driven results. 
 										I like to use advanced technologies to address everyday problems for consumers and businesses alike.
 										I also enjoy solving issues using an analytical approach and 
-										incorporating technology into my work. <a href="#work">work</a>.</p> -->
+										incorporating technology into my Project. <a href="#project">Project</a>.</p> -->
 	
 										<div class="colxx">
 											<div class="containerss">
@@ -217,11 +218,11 @@
 								<p class="text-justify">I am passionate about data driven results. 
 									I like to use advanced technologies to address everyday problems for consumers and businesses alike.
 									I also enjoy solving issues using an analytical approach and 
-									incorporating technology into my work. <a href="#work">work</a>.</p> -->
+									incorporating technology into my Project. <a href="#project">Project</a>.</p> -->
 							</article>
 
-						<!-- Work -->
-							<article id="work" style="background-color: rgba(2, 60, 193, 0.2);">
+						<!-- Project -->
+							<article id="project" style="background-color: rgba(2, 60, 193, 0.2);">
 								<div>
 									Ariento Surya Dintiarto
 									<ul style="display: flex; list-style: none; float: right;">
@@ -231,7 +232,7 @@
 										<li><a href="#contact">Contact</a></li>
 									</ul>
 								</div>
-								<h2 class="major">Work</h2>
+								<h2 class="major">Project</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Wine Review in Python<br><a
 										href="https://colab.research.google.com/drive/1h_TK8kS1aZjqM72VX0rM5YRiwO2-7l6W?usp=sharing">Text Data</a></p>
@@ -254,7 +255,7 @@
 									<ul style="display: flex; list-style: none; float: right;">
 										<li><a href="#skills">Skills</a></li>
 										<li><a href="#certificates">Certificates</a></li>
-										<li><a href="#work">Work</a></li>							
+										<li><a href="#project">Project</a></li>							
 										<li><a href="#contact">Contact</a></li>
 									</ul>
 								</div>
@@ -282,7 +283,7 @@
 								<ul style="display: flex; list-style: none; float: right;">
 									<li><a href="#about">About</a></li>
 									<li><a href="#skills">Skills</a></li>
-									<li><a href="#work">Work</a></li>							
+									<li><a href="#project">Project</a></li>							
 									<li><a href="#contact">Contact</a></li>
 								</ul>
 							</div>
@@ -329,7 +330,7 @@
 										<li><a href="#about">About</a></li>
 										<li><a href="#skills">Skills</a></li>
 										<li><a href="#certificates">Certificates</a></li>
-										<li><a href="#work">Work</a></li>							
+										<li><a href="#project">Project</a></li>							
 									</ul>
 								</div>
 								<h2 class="major">Contact</h2>
@@ -361,6 +362,8 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/typed.min.js"></script>
+			<script src="assets/js/aren.js"></script>
 
 	</body>
 </html>
