--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 							<div class="inner">
 								<span  ><img src="images/profil-1.png" alt=""></span>
 								<h1>Ariento Surya Dintiarto</h1>
-								<p><span class="typed" data-typed-items="Data Analyst, Mathematics, Data Science, Data Engineer"></span></p>
-								<!-- <p>Welcome to my portfolio!</p> -->
+								<h5><span class="typed" data-typed-items="Data Analyst, Mathematics, Data Science, Data Engineer"></span></h5>
+								<p>Welcome to my portfolio!</p>
 							</div>
 						</div>
 						<nav>
