--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 											<div class="backk" style="background-image:url(images/picba.png)">
 												<div class="innerr">
 													<p> </p>
-													<p><img src="./images/icons8-python-94.png" style="width:60px">Pandas Matplotlib Numpy Seaborn Sklearn Tenserflow</p>
+													<p><img src="./images/icons8-python-94.png" style="width:60px"><br>Pandas Matplotlib Numpy Seaborn Sklearn Tenserflow</p>
 												</div>
 											</div>
 										</div>
@@ -90,8 +90,8 @@
 											<div class="backk" style="background-image:url(images/picba.png)">
 												<div class="innerr">
 													<p> </p>
-													<p><img src="./images/icons8-my-sql-48.png" style="width:60px !important">MySQL</p>
-													<p><img src="./images/icons8-postgresql-48.png" style="width:60px !important">PostgreSQL</p>
+													<p><img src="./images/icons8-my-sql-48.png" style="width:60px !important"><br>MySQL</p>
+													<p><img src="./images/icons8-postgresql-48.png" style="width:60px !important"><br>PostgreSQL</p>
 												</div>
 											</div>
 										</div>
@@ -110,8 +110,8 @@
 											<div class="backk" style="background-image:url(images/picba.png)">
 												<div class="innerr">
 													<p> </p>
-													<p><img src="./images/icons8-jupyter-48.png" style="width:60px !important">Jupyter Notebook</p>
-													<p><img src="./images/icons8-visual-studio-code-2019-48.png" style="width:60px ">Visual Studio Code</p>
+													<p><img src="./images/icons8-jupyter-48.png" style="width:60px !important"><br>Jupyter Notebook</p>
+													<p><img src="./images/icons8-visual-studio-code-2019-48.png" style="width:60px "><br>Visual Studio Code</p>
 												</div>
 											</div>
 										</div>
@@ -128,8 +128,8 @@
 											<div class="backk" style="background-image:url(images/picba.png)">
 												<div class="innerr">
 													<p> </p>
-													<p><img src="./images/icons8-tableau-software-48.png" style="width:60px !important">Tableau</p>
-													<p><img src="./images/icons8-power-bi-48.png" style="width:60px ">Power BI</p>
+													<p><img src="./images/icons8-tableau-software-48.png" style="width:60px !important"><br>Tableau</p>
+													<p><img src="./images/icons8-power-bi-48.png" style="width:60px "><br>Power BI</p>
 												</div>
 											</div>
 										</div>
@@ -152,8 +152,8 @@
 											<div class="backk" style="background-image:url(images/picba.png)">
 												<div class="innerr">
 													<p> </p>
-													<p><img src="images/icons8-microsoft-excel-2019-48.png" style="width:60px !important">Excel</p>
-													<p><img src="images/icons8-google-colab-48.png" style="width:60px !important">Google Colab</p>
+													<p><img src="images/icons8-microsoft-excel-2019-48.png" style="width:60px !important"><br>Excel</p>
+													<p><img src="images/icons8-google-colab-48.png" style="width:60px !important"><br>Google Colab</p>
 
 
 												</div>
@@ -173,8 +173,8 @@
 											<div class="backk" style="background-image:url(images/picba.png)"	>
 												<div class="innerr">
 													<P> </P>
-													<p><img src="./images/icons8-regression-64.png" style="width:60px !important">Regression Analysis </p>
-													<p><img src="./images/icons8-line-chart-100.png" style="width:60px !important">Correlation Analysis</p>
+													<p><img src="./images/icons8-regression-64.png" style="width:60px !important"><br>Regression Analysis </p>
+													<p><img src="./images/icons8-line-chart-100.png" style="width:60px !important"><br>Correlation Analysis</p>
 												</div>
 											</div>
 										</div>
@@ -190,8 +190,8 @@
 											<div class="backk" style="background-image:url(images/picba.png)"	>
 												<div class="innerr">
 													<P> </P>
-													<p><img src="./images/icons8-heat-map-48.png" style="width:60px !important">Clustering Analysis</p>
-													<p><img src="./images/icons8-venn-diagram-100.png" style="width:60px !important">Classification Analysis</p>
+													<p><img src="./images/icons8-heat-map-48.png" style="width:60px !important"><br>Clustering Analysis</p>
+													<p><img src="./images/icons8-venn-diagram-100.png" style="width:60px !important"><br>Classification Analysis</p>
 												</div>
 											</div>
 										</div>
@@ -207,8 +207,8 @@
 											<div class="backk" style="background-image:url(images/picba.png)"	>
 												<div class="innerr">
 													<P> </P>
-													<p><img src="./images/icons8-artificial-intelligence-48.png" style="width:60px !important">Machine Learning</p>
-													<p><img src="./images/icons8-combo-chart-40.png" style="width:60px !important">Exploratory Data Analysis</p>
+													<p><img src="./images/icons8-artificial-intelligence-48.png" style="width:60px !important"><br>Machine Learning</p>
+													<p><img src="./images/icons8-combo-chart-40.png" style="width:60px !important"><br>Exploratory Data Analysis</p>
 												</div>
 											</div>
 										</div>
