--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright"> Copyright 2023 - All Rights Reserved.</p>
+						<h6 class="copyright"> Copyright © 2023 - All rights reserved</h6>
 					</footer>
 
 			</div>
