--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
 								</div>
 								<h2 class="major">Contact</h2>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/ariento-surya-dintiarto-922373159/" class="icon fa-linkedin"><span class="label">fa-linkedin</span></a></li>
-									<li><a href="https://github.com/ArientoSuryaDintiarto" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/ariento-surya-dintiarto-922373159/" target="_blank" class="icon fa-linkedin"><span class="label" >fa-linkedin</span></a></li>
+									<li><a href="https://github.com/ArientoSuryaDintiarto" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="mailto:aryadintiarto@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</article>
